--- a/TaskGenX/03-our_work.tex
+++ b/TaskGenX/03-our_work.tex
@@ -47,7 +47,7 @@ That is, the dependence analysis data, the address of the allocated task, its pa
 
 
 
-\begin{lstlisting}[float, emph={void,if,return,non_critical_queue, critical_queue,not,true,and,break}, captionpos=b, caption={Pseudo-code for the SRT loop.},label=SRTloop, emph={[2]mat}, emphstyle={[2]}, aboveskip={0\baselineskip}, frame=tb, belowskip={0\baselineskip}]
+\begin{lstlisting}[float, emph={SRTloop}, caption={Pseudo-code for the SRT loop.},label=SRTloop]
 void SRTloop() {
   while( true ) {   
     while(RRQ is not empty) 
