--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -32,18 +32,22 @@
 \definecolor{myorange}{rgb}{1.0,0.4,0}
 
 \lstset{%language=C,%basicstyle=\small\ttfamily,
-	basicstyle=\tttfamily,
+	%basicstyle=\tttfamily,
 	emphstyle=\bfseries,
 	columns=fixed,
 	commentstyle=\color{mygray},
-	keywordstyle=\color{RoyalBlue}\bfseries,
-	morekeywords={void,return,if,else,for,int},
-	numbers=left,xleftmargin=2em,frame=single,framexleftmargin=1.5em,
 	moredelim=*[l][\textit]{//},
+	moredelim=*[l][\color{RoyalBlue}\textit]{//},
 	moredelim=*[l][\bfseries]{\#},
-%	morecomment=[l][{\color[rgb]{0.1, 0.2, 0.8}}]{\#},
 	morecomment=[l][{\color{YellowOrange}\bfseries}]{\#},
-	literate={...}{\dots}3
+	keywordstyle=\color{MidnightBlue}\bfseries,
+	morekeywords={void,return,if,else,for,int,while,not,and,or,in,break,true,false},
+	numbers=left,xleftmargin=2em,frame=single,framexleftmargin=1.5em,
+	literate={...}{\dots}3,
+	frame=tb,
+	captionpos=b,
+	rulecolor=\color{MidnightBlue},
+	mathescape=true
 } 
 %\usepackage[sort]{cite}
 %\usepackage{biblatex}
